--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -32,7 +32,7 @@
   font-size: calc(10px + 2vmin);
   color: var(--clr-white);
   padding-left: 10%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .home-wrapper {
